# meesign-crypto

./: Cargo.toml  build.rs  flake.nix
.github/workflows/: rust.yml
benches/: ptsrsap1_signing.rs
proto/: meesign.proto
src/: c_api.rs  lib.rs  protocol.rs
src/protocol/: apdu.rs  elgamal.rs  frost.rs  gg18.rs  mod.rs  ptsrsap1.rs
src/protocols/: elgamal.rs  frost.rs  gg18.rs  mod.rs
