[package]
name = "meesign-crypto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
mpecdsa = { git = "https://github.com/jirigav/mpecdsa.git", optional = true }
openssl = "0.10.55"
prost = "0.11"
serde = "1.0"
serde_json = "1.0"
typetag = "0.2.1"
elastic-elgamal = { version = "0.3.0", features = ["serde"], optional = true }
rand = "0.8.5"
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }
frost-secp256k1 = { git  = "https://github.com/dufkan/frost.git", branch = "serialize-state", features = ["serde"], optional = true }
aes-gcm = "0.10.2"
# FIXME publish pretzel and update the path
pretzel = {"path" = "/home/qup/projects/pretzel", optional = true}
# TODO is it possible to depend on the upstream RSA for meesign-crypto
# FIXME publish pretzel and update the path
rsa = {"path" = "/home/qup/projects/RSA", optional = true}
num-bigint = { version = "0.8.2", features = [],  package = "num-bigint-dig" }

[build-dependencies]
cbindgen = "0.20.0"
prost-build = "0.11"

[dev-dependencies]
p256 = { version="0.13.2", features = ["ecdsa"] }
sha2 = "0.10.7"
itertools = "0.11.0"

[features]
default = ["gg18", "frost", "elgamal", "bindings", "ptsrsap1"]
protocol = []
bindings = []
gg18 = ["protocol", "dep:mpecdsa"]
frost = ["protocol", "dep:frost-secp256k1"]
elgamal = ["protocol", "dep:elastic-elgamal"]
ptsrsap1 = ["protocol", "dep:pretzel", "dep:rsa"]
